Closed Bug 1726926 Opened 3 years ago Closed 3 years ago

Mailing lists named in Japanese characters will be warned that they are not valid email addresses

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 91
defect

Tracking

(thunderbird_esr91+ fixed, thunderbird92+ affected)

RESOLVED FIXED
93 Branch
Tracking Status
thunderbird_esr91 + fixed
thunderbird92 + affected

People

(Reporter: earlgreypicard, Assigned: lasana)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Steps to Reproduce:

  1. Create a mailing list named "リスト".
  2. Create a new message.
  3. Open Contact Sidebar.
  4. Add the mailing list to To: field.

Actual Results:

The mailing list is highlighted in red and the following tooltips are displayed.

リスト <リスト> is not a valid e-mail address

Expected Results:

Mailing lists named in Japanese characters should not be warned.

Regression window:

https://hg.mozilla.org/comm-central/pushloghtml?fromchange=a84d70e678b453f16894023f0d7754a60cf5fc29&tochange=e8d02f5ccc406e1cdc8ef1af5e4cb8faf1db6bd4

Component: Untriaged → Message Compose Window
Assignee: nobody → lasana
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1705100
Blocks: tb91found
Status: NEW → ASSIGNED

Let's get this landed as well.

Target Milestone: --- → 93 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/fbbeadfaf124
Use same parameter type as in nsIAbManager for nsIAbDIrectory for getMailListFromName(). r=darktrojan

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

Please request 91 uplift

Comment on attachment 9237556 [details]
Bug 1726926 - Use same parameter type as in nsIAbManager for nsIAbDIrectory for getMailListFromName(). r=darktrojan

[Approval Request Comment]
Regression caused by (bug #): 1712601
User impact if declined: Japanese (and possibly other locale) characters are incorrectly flagged as invalid in email addresses
Testing completed (on c-c, etc.): trunk
Risk to taking this patch (and alternatives if risky): Should be minimal, this patch just changes the type used in the idl files.

Attachment #9237556 - Flags: approval-comm-esr91?

Comment on attachment 9237556 [details]
Bug 1726926 - Use same parameter type as in nsIAbManager for nsIAbDIrectory for getMailListFromName(). r=darktrojan

[Triage Comment]
Approved for esr91

Attachment #9237556 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: