Bug 1726926 - Use same parameter type as in nsIAbManager for nsIAbDIrectory for getMailListFromName(). r=darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D123375

--HG--
extra : amend_source : 8d43d0b9fb3d3b4c411236cbc1d449163c24f2bd